# openbis-chatbot

./: README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
examples/: example_input.json  example_output.json
prompts/: examples.txt
src/: data_retrieval.py  parser.py
src/openbis_chatbot/: llm_interface.py  parser.py  prompt.py
src/openbis_chatbot/prompts/: base_prompt.txt
src/openbis_chatbot/utils/: logger.py
tests/: test.py  test_data_retrieval.py  test_llm_interface.py  test_parser.py  test_prompt.py
utils/: validators.py
